--- a/step5.html
+++ b/step5.html
@@ -63,10 +63,93 @@
 					step1();
             	}
             }
+            //第七步 顶棱归位
+            function step7(){
+            	isAutoReset = false;
+            	console.log('step7');
+            }
             //第六步 顶角面位
             function step6(){
-            	console.log('step6');
-            	isAutoReset = false;
+            	if(checkStep6()){
+            		currentStep = 7;
+            		step7();
+            		return;
+            	}
+
+            	step6Case1(0);
+            	step6Case1(1);
+            	step6Case1(2);
+            	step6Case1(3);
+            }
+            function rotate601(rotateNum){
+            	r(rotateNum,function(){
+            		U(rotateNum,function(){
+            			L(rotateNum,function(){
+            				u(rotateNum,function(){
+            					R(rotateNum,function(){
+            						U(rotateNum,function(){
+            							l(rotateNum,function(){
+            								u(rotateNum)
+            							})
+            						})
+            					})
+            				})
+            			})
+            		})
+            	})
+            }
+            function rotate602(rotateNum){
+            	U(rotateNum,function(){
+            		L(rotateNum,function(){
+            			u(rotateNum,function(){
+            				r(rotateNum,function(){
+            					U(rotateNum,function(){
+            						l(rotateNum,function(){
+            							u(rotateNum,function(){
+            								R(rotateNum)
+            							})
+            						})
+            					})
+            				})
+            			})
+            		})
+            	})
+            }
+            function rotate603(rotateNum){
+            	R(rotateNum,function(){
+            		U(rotateNum,function(){
+            			r(rotateNum,function(){
+            				U(rotateNum,function(){
+            					R(rotateNum,function(){
+            						U(rotateNum,function(){
+            							U(rotateNum,function(){
+            								r(rotateNum)
+            							})
+            						})
+            					})
+            				})
+            			})
+            		})
+            	})
+            }
+            //顶角面位 第一种、第二种和第三种情况
+            function step6Case1(rotateNum){
+            	if(!isRotating){
+            		var cube0 = getCubeByIndex(0,rotateNum);
+            		var cube2 = getCubeByIndex(2,rotateNum);
+            		var cube20 = getCubeByIndex(20,rotateNum);
+            		var zLine = rotateAxisByYLine(ZLine,rotateNum);
+            		var xLine = rotateAxisByYLine(XLine,rotateNum);
+            		if(getFaceColorByVector(cube0,zLine)==topColor&&
+            			getFaceColorByVector(cube2,xLine)==topColor){
+            			rotate601(rotateNum);
+            		}else if(getFaceColorByVector(cube2,zLine)==topColor&&
+            			getFaceColorByVector(cube20,xLine)==topColor){
+            			rotate602(rotateNum);
+            		}else if(getFaceColorByVector(cube0,zLine)==topColor){
+            			rotate603(rotateNum);
+            		}
+            	}
             }
             //判断是否完成第六步 顶角面位
             function checkStep6(){
@@ -74,6 +157,17 @@
             		return false;
             	}
 
+            	var cube0 = getCubeByIndex(0);
+            	var cube2 = getCubeByIndex(2);
+            	var cube18 = getCubeByIndex(18);
+            	var cube20 = getCubeByIndex(20);
+            	if(getFaceColorByVector(cube0,YLine)!=topColor||
+            		getFaceColorByVector(cube2,YLine)!=topColor||
+            		getFaceColorByVector(cube18,YLine)!=topColor||
+            		getFaceColorByVector(cube20,YLine)!=topColor){
+            		return false;
+            	}
+            	return true;
             }
             //第五步 顶棱面位
             function step5(){
@@ -675,7 +769,6 @@
             function step2(indexNo){
             	if(checkStep2()){
             		currentStep = 3;
-            		console.log('start step3');
 					step3();
 					return;
             	}
