--- a/step5.html
+++ b/step5.html
@@ -395,18 +395,18 @@
                             rotate401(rotateNum);
                         }else if(yLine11Color==getFaceColorByVector(cube22,zLineAd)&&
                             xLine11Color==getFaceColorByVector(cube14,xLine)){
-                            if(rotateNum+1>=4){
-                                rotate402(0);
-                            }else{
-                                rotate402(rotateNum+1);
+                            rotateNum++;
+                            if(rotateNum>=4){
+                                rotateNum = 0;
                             }
+                            rotate402(rotateNum);
                         }else{
                             u(rotateNum,function(){
-                                if(rotateNum+1>=4){
-                                    step4Case1And2(0);
-                                }else{
-                                    step4Case1And2(rotateNum+1);
+                                rotateNum++;
+                                if(rotateNum>=4){
+                                    rotateNum = 0;
                                 }
+                                step4Case1And2(rotateNum);
                             })
                         }
                     }
@@ -473,36 +473,36 @@
             //第三步底角归位
             function step3(){
             	if(checkStep3()){
-            		currentStep = 3;
+            		currentStep = 4;
             		console.log('start step4');
-            		step4();
+                    step4();
             		return;
             	}
 
-            	step3Case1(0);
-            	step3Case1(1);
-            	step3Case1(2);
-            	step3Case1(3);
+                step3Case4(0);
+                step3Case4(1);
+                step3Case4(2);
+                step3Case4(3);
 
-            	step3Case2(0);
-            	step3Case2(1);
-            	step3Case2(2);
-            	step3Case2(3);
+                step3Case5(0);
+                step3Case5(1);
+                step3Case5(2);
+                step3Case5(3);
+
+                step3Case1(0);
+                step3Case1(1);
+                step3Case1(2);
+                step3Case1(3);
+
+                step3Case2(0);
+                step3Case2(1);
+                step3Case2(2);
+                step3Case2(3);
 
             	step3Case3(0);
             	step3Case3(1);
             	step3Case3(2);
             	step3Case3(3);
-
-            	step3Case4(0);
-            	step3Case4(1);
-            	step3Case4(2);
-            	step3Case4(3);
-
-            	step3Case5(0);
-            	step3Case5(1);
-            	step3Case5(2);
-            	step3Case5(3);
             }
             //底角归位第一种情况
             function step3Case1(rotateNum){
@@ -522,6 +522,7 @@
 	            	var yLine2Color = getFaceColorByVector(cube2,yLine);
 
 	            	if(getFaceColorByVector(cube2,xLine)==bottomColor){
+                        console.log('step3Case1');
 	            		if(getFaceColorByVector(cube4,zLine)==zLine2Color&&
 	            		   getFaceColorByVector(cube7,zLine)==zLine2Color&&	
 	            		   getFaceColorByVector(cube14,xLine)==yLine2Color&&
@@ -533,11 +534,11 @@
 	            			})
 	            		}else{
 	            			u(rotateNum,function(){
-	            				if(rotateNum+1>=4){
-	            					step3Case1(0);
-	            				}else{
-	            					step3Case1(rotateNum+1);
+                                rotateNum++;
+	            				if(rotateNum>=4){
+                                    rotateNum = 0;
 	            				}
+                                step3Case1(rotateNum);
 	            			})
 	            		}
 	            	}
@@ -561,6 +562,7 @@
 	            	var xLine2Color = getFaceColorByVector(cube2,xLine);
 
 	            	if(getFaceColorByVector(cube2,zLine)==bottomColor){
+                        console.log('step3Case2');
 	            		if(getFaceColorByVector(cube4,zLine)==yLine2Color&&
 	            		   getFaceColorByVector(cube7,zLine)==yLine2Color&&
 	            		   getFaceColorByVector(cube14,xLine)==xLine2Color&&
@@ -572,11 +574,11 @@
 	            			})
 	            		}else{
 	            			u(rotateNum,function(){
-	            				if(rotateNum+1>=4){
-	            					step3Case2(0);
-	            				}else{
-	            					step3Case2(rotateNum+1);
-	            				}
+                                rotateNum++;
+                                if(rotateNum>=4){
+                                    rotateNum = 0;
+                                }
+                                step3Case2(rotateNum);
 	            			})
 	            		}
 	            	}
@@ -600,6 +602,7 @@
             		var xLine2Color = getFaceColorByVector(cube2,xLine);
 
             		if(getFaceColorByVector(cube2,yLine)==bottomColor){
+                        console.log('step3Case3');
             			if(getFaceColorByVector(cube14,xLine)==zLine2Color&&
             			   getFaceColorByVector(cube17,xLine)==zLine2Color&&
             			   getFaceColorByVector(cube4,zLine)==xLine2Color&&
@@ -619,11 +622,11 @@
             			   	})
             			}else{
         					u(rotateNum,function(){
-	            				if(rotateNum+1>=4){
-	            					step3Case3(0);
-	            				}else{
-	            					step3Case3(rotateNum+1);
-	            				}
+                                rotateNum++;
+                                if(rotateNum>=4){
+                                    rotateNum = 0;
+                                }
+                                step3Case3(rotateNum);
 	            			})
             			}
             		}
@@ -635,97 +638,53 @@
             		var cube8 = getCubeByIndex(8,rotateNum);
 	            	var cube17 = getCubeByIndex(17,rotateNum);
 	            	var cube14 = getCubeByIndex(14,rotateNum);
-	            	var cube11 = getCubeByIndex(11,rotateNum);
-	            	var cube1 = getCubeByIndex(1,rotateNum);
-	            	var cube4 = getCubeByIndex(4,rotateNum);
-	            	var cube7 = getCubeByIndex(7,rotateNum);
 	            	var xLine = rotateAxisByYLine(XLine,rotateNum);
 	            	var zLine = rotateAxisByYLine(ZLine,rotateNum);
 	            	var zLine8Color = getFaceColorByVector(cube8,zLine);
-	            	var xLine11Color = getFaceColorByVector(cube11,xLine);
-	            	var zLine1Color = getFaceColorByVector(cube1,zLine);
-	            	if(getFaceColorByVector(cube8,xLine)==bottomColor){
-	            		if(getFaceColorByVector(cube17,xLine)==zLine8Color&&
-		        			getFaceColorByVector(cube14,xLine)==zLine8Color){
-	            			console.log('step3Case4-1');
-		        			f(rotateNum,function(){
-		            			U(rotateNum,function(){
-		            				F(rotateNum,function(){
-		            					R(rotateNum,function(){
-		            						U(rotateNum,function(){
-		            							r(rotateNum);
-		            						})
-		            					})
-		            				})
-		            			})
-		            		})
-		        		}else if(xLine11Color==getFaceColorByVector(cube17,xLine)&&
-		        			xLine11Color==getFaceColorByVector(cube14,xLine)){
-		        			console.log('step3Case4-2');
-		        			R(rotateNum,function(){
-		        				R(rotateNum);
-		        			})
-		        		}else if(zLine1Color==getFaceColorByVector(cube4,zLine)&&
-		        			zLine1Color==getFaceColorByVector(cube7,zLine)){
-		        			console.log('step3Case4-3');
-		        			f(rotateNum,function(){
-		        				f(rotateNum)
-		        			})
-		        		}else{
-		        			console.log('step3Case4-4');
-		        			u(rotateNum);
-		        		}
-	            	}
+
+            		if(getFaceColorByVector(cube8,xLine)==bottomColor&&
+                        getFaceColorByVector(cube17,xLine)==zLine8Color&&
+	        			getFaceColorByVector(cube14,xLine)==zLine8Color){
+            			console.log('step3Case4');
+	        			f(rotateNum,function(){
+	            			U(rotateNum,function(){
+	            				F(rotateNum,function(){
+	            					R(rotateNum,function(){
+	            						U(rotateNum,function(){
+	            							r(rotateNum);
+	            						})
+	            					})
+	            				})
+	            			})
+	            		})
+                    }
             	}
             }
             //底角归位第五种情况
             function step3Case5(rotateNum){
             	if(!isRotating){
             		var cube8 = getCubeByIndex(8,rotateNum);
-	            	var cube17 = getCubeByIndex(17,rotateNum);
-	            	var cube14 = getCubeByIndex(14,rotateNum);
-	            	var cube11 = getCubeByIndex(11,rotateNum);
-	            	var cube1 = getCubeByIndex(1,rotateNum);
 	            	var cube4 = getCubeByIndex(4,rotateNum);
 	            	var cube7 = getCubeByIndex(7,rotateNum);
 	            	var xLine = rotateAxisByYLine(XLine,rotateNum);
 	            	var zLine = rotateAxisByYLine(ZLine,rotateNum);
             		var xLine8Color = getFaceColorByVector(cube8,xLine);
-            		var xLine11Color = getFaceColorByVector(cube11,xLine);
-	            	var zLine1Color = getFaceColorByVector(cube1,zLine);
-            		if(getFaceColorByVector(cube8,zLine)==bottomColor){
-            			if(getFaceColorByVector(cube7,zLine)==xLine8Color&&
-	            			getFaceColorByVector(cube4,zLine)==xLine8Color){
-            				console.log('step3Case5-1');
-	            			R(rotateNum,function(){
-		            			u(rotateNum,function(){
-		            				r(rotateNum,function(){
-		            					f(rotateNum,function(){
-		            						u(rotateNum,function(){
-		            							F(rotateNum);
-		            						})
-		            					})
-		            				})
-		            			})
-		            		})
-	            		}else if(xLine11Color==getFaceColorByVector(cube17,xLine)&&
-		        			xLine11Color==getFaceColorByVector(cube14,xLine)){
-	            			console.log('step3Case5-2');
-		        			R(rotateNum,function(){
-		        				R(rotateNum);
-		        			})
-		        		}else if(zLine1Color==getFaceColorByVector(cube4,zLine)&&
-		        			zLine1Color==getFaceColorByVector(cube7,zLine)){
-		        			console.log('step3Case5-3');
-		        			f(rotateNum,function(){
-		        				f(rotateNum)
-		        			})
-		        		}else{
-		        			console.log('step3Case5-4');
-		        			u(rotateNum);
-		        		}
-            		}
-            		
+        			if(getFaceColorByVector(cube8,zLine)==bottomColor&&
+                        getFaceColorByVector(cube7,zLine)==xLine8Color&&
+            			getFaceColorByVector(cube4,zLine)==xLine8Color){
+        				console.log('step3Case5');
+            			R(rotateNum,function(){
+	            			u(rotateNum,function(){
+	            				r(rotateNum,function(){
+	            					f(rotateNum,function(){
+	            						u(rotateNum,function(){
+	            							F(rotateNum);
+	            						})
+	            					})
+	            				})
+	            			})
+	            		})
+                    }
             	}
             }
             //判断是否完成第三步底角归位
@@ -801,11 +760,11 @@
 	            			});
 	            		}else{
 	            			u(rotateNum,function(){
-	            				if(rotateNum+1>3){
-	            					step2Case1(0);
-	            				}else{
-	            					step2Case1(rotateNum+1);
-	            				}
+                                rotateNum++;
+                                if(rotateNum>=4){
+                                    rotateNum = 0;
+                                }
+                                step2Case1(rotateNum);
 	            			});
 	            		}
 	            	}
